--- a/src/library.html
+++ b/src/library.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
     <link rel="stylesheet" href="./sass/index.scss" />
+    <title>My Library</title>
   </head>
   <body>
-    <include src="./partials/home-page/header.html"></include>
-    <include src="./partials/home-page/main.html"></include>
+    <include src="./partials/my-library/header.html"></include>
+    <include src="./partials/my-library/main.html"></include>
     <include src="./partials/utils/footer.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
