--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <body>
     <include src="./partials/home-page/header.html"></include>
     <include src="./partials/home-page/main.html"></include>
+    <include src="./partials/utils/pagination.html"></include>
     <include src="./partials/utils/footer.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
