--- a/src/library.html
+++ b/src/library.html
@@ -20,6 +20,7 @@
   <body>
     <include src="./partials/my-library/header.html"></include>
     <include src="./partials/my-library/main.html"></include>
+    <include src="./partials/utils/pagination.html"></include>
     <include src="./partials/utils/footer.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
