--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <include src="./partials/home-page/header.html"></include>
     <include src="./partials/home-page/main.html"></include>
     <include src="./partials/utils/footer.html"></include>
+    <include src="./partials/utils/footer-modal.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
