--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <include src="./partials/home-page/header.html"></include>
     <include src="./partials/home-page/main.html"></include>
     <include src="./partials/utils/pagination.html"></include>
+    <include src="./partials/utils/switch-theme.html"></include>
     <include src="./partials/utils/footer.html"></include>
     <include src="./partials/utils/footer-modal.html"></include>
     <include src="./partials/utils/loader.html"></include>
