--- a/src/library.html
+++ b/src/library.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <include src="./partials/my-library/header.html"></include>
+    <include src="./partials/my-library/genres-filter.html"></include>
     <include src="./partials/my-library/main.html"></include>
     <include src="./partials/utils/pagination.html"></include>
     <include src="./partials/utils/footer.html"></include>
