--- a/src/library.html
+++ b/src/library.html
@@ -24,6 +24,8 @@
     <include src="./partials/utils/pagination.html"></include>
     <include src="./partials/utils/footer.html"></include>
     <include src="./partials/utils/footer-modal.html"></include>
+    <include src="./partials/utils/trailer-modal.html"></include>
+
     <script type="module" src="./index.js"></script>
   </body>
 </html>
