--- a/src/index.html
+++ b/src/index.html
@@ -27,5 +27,5 @@
     <include src="./partials/utils/switch-theme.html"></include>
     <include src="./partials/modal-movie/modal_movie.html"></include>
     <script type="module" src="./index.js"></script>
-  </body>
+  <!-- </body> -->
 </html>
