--- a/src/login.htm
+++ b/src/login.htm
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
@@ -15,15 +16,10 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
-    <title>My Library</title>
+    <title>Login</title>
   </head>
   <body>
-    <include src="./partials/my-library/header.html"></include>
-    <include src="./partials/my-library/main.html"></include>
-    <include src="./partials/utils/pagination.html"></include>
-    <include src="./partials/utils/footer.html"></include>
-    <include src="./partials/utils/footer-modal.html"></include>
-    <include src="./partials/utils/trailer-modal.html"></include>
+    <include src="./partials/login/login.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
