add button youTube

--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,5 @@
     <include src="./partials/utils/trailer-modal.html"></include>
 
     <script type="module" src="./index.js"></script>
-  <!-- </body> -->
+  </body>
 </html>
