--- a/src/login.htm
+++ b/src/login.htm
@@ -19,7 +19,7 @@
     <title>Login</title>
   </head>
   <body>
-    <include src="./partials/login/login.html"></include>
+    <include src="./partials/login/auth.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
